docker dile added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=TaskManagerApplication
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManagerDB
+spring.datasource.url=jdbc:postgresql://my_database:5432/TaskManagerDB
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+server.port=8080
 
 # General logging
 logging.level.org.springframework=INFO
@@ -14,3 +14,23 @@ logging.level.com.yourpackage=DEBUG
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
+
+
+
+#docker network create my_network
+# docker network ls                 for view
+
+
+#.\src\main\resources\persistence     enter into folder
+#run this all in same folder
+#docker build . -t postgres_db       build postgresql for docker
+#docker run --name my_database --network my_network postgres_db
+
+
+#come to previous project path 
+#mvn clean package
+#docker build . -t spring_boot_service
+#docker run -d -p 8080:8080 --name backend --network my_network spring_boot_service
+
